# dnd

./: .gitignore  .luacheckrc  .typos.toml  CLAUDE.md  README.md
.claude/: settings.json
.githooks/: pre-commit
bestiary/: akhekh.md  available-demons.md  egypt.md  maalm-watch.md  muspelheim.md  the-rat-man.md
campaign/: campaign.db
characters/: Pax Verdant  aniess.md  blackacre.md  bram-hale.md  calix-vire.md  demon-wife.md  fenrick-mottle.md  ilyra-mosswake.md  jasper.md  lucrecia.md  mul.md  party-roster.md  pax.md  preem.md  preems-demons.md  sarric.md  shepard.md  the-children.md  the-psychic-bat.md  the-second-hand.md  tovin-reedhand.md
docs/: oneworld.md  tts-asset-debug.md  tts-layout-tooling.md
encounters/: akhekh-road-ambush.md  docks-departure.md  island-of-the-thinkers.md  tavern-name-hunter-crews.md  the-descent-of-inanna.md  the-dream-quest.md  the-gates-of-kala.md  the-haals-runoff.md  the-houses-of-xibalba.md  the-iliad-battles.md  the-mill.md  the-second-hand-ambush.md  the-wisdom-duel.md  v-second-contact.md  valley-of-the-kings.md
handouts/: README.md  clay-tablet-of-baruch.md  copaa-lament.md  creation-aniess.md  creation-jasper.md  creation-pax.md  creation-sam.md  creation-sarric.md  crossing-the-bar.md  do-not-go-gentle.md  do-not-stand-at-my-grave.md  dragon-hoard-warning.md  into-my-heart-an-air-that-kills.md  invictus.md  last-kings-lament.md  locksley-hall-vision.md  on-ragnarok-1.md  ramses-victory-dijay.md  recessional.md  requiem.md  seafarer-grave-gold.md  shipwrecked-sailor.md  shop-price-list.md  the-dry-river-to-maalm.md  the-ruin.md  (+7 more)
scripts/: pyproject.toml
scripts/dnd_tools/: __init__.py  clean_ow_map.py  db.py  dnd_cli.py  fix_oneworld.py  formatters.py  import_ow_map.py  pad_maps.py  prose_lint.py  tts_assets.py  tts_cli.py  tts_save.py
scripts/tests/: test_campaign_db.py  test_clean_ow_map.py  test_fix_oneworld.py  test_import_ow_map.py  test_pad_maps.py  test_prose_lint.py  test_smoke.py  test_tts_assets.py  test_tts_save.py
(+228 files in other folders)
