[project]
name = "dnd-tools"
version = "0.1.0"
description = "CLIs and tooling for the dnd campaign repo."
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "rich>=13.7",
    "httpx>=0.27",
]

[project.scripts]
dnd = "dnd_tools.dnd_cli:main"
tts = "dnd_tools.tts_cli:main"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8",
    "typos>=1.46",
    "pip-audit>=2.7",
    "pip-licenses>=4.4",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dnd_tools"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["dnd_tools", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
